logo on mobile fix #2

--- a/css/site.css
+++ b/css/site.css
@@ -120,3 +120,9 @@ p, a {
   -webkit-background-size: 80px 80px;
   background-size: 80px 80px;
 }
+
+@media only screen and (min-width : 768px) {
+  footer {
+    magin: none;
+  }
+}
